--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./Style/style.css">
 </head>
 <body>
-    <div class="box"></div>    
+    <main>
+        <h1>Medha, I Love You</h1>
+    </main>
 </body>
 </html>
