--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning</title>
-    <link rel="stylesheet" href="./Style/style.css">
-</head>
-<body>
-    <main>
-        <h1>Medha, I Love You</h1>
-    </main>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Learning</title>
+        <link rel="stylesheet" href="./Style/style.css" />
+    </head>
+    <body>
+        <div class="container">
+            <section><h1>NSMSA</h1></section>
+            <section><h1>Medha</h1></section>
+            <section><h1>Shafin</h1></section>
+        </div>
+    </body>
 </html>
